--- a/home.html
+++ b/home.html
@@ -18,30 +18,40 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="container-fluid">
+  <div class="header">
+    <h1>Click dem Faces</h1>
+    <button type="button" class="btn btn-secondary" id="buttonn">Start &gt;&gt;</button>
+    <div id="redirect_box" style="display:block;">
+      You're done in
+      <span id="countdown"></span>
+      <span id="notifier"></span>
+    </div>
+  </div>
   <div class="row-fluid">
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <div class="row">
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/ritu/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/tonypeterson/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/spiltmilkstudio/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/ritu/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/tonypeterson/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/spiltmilkstudio/128.jpg"></div>
       </div>      
       <div class="row">
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/pixeliris/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/kaibrach/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/jlantunez/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/pixeliris/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kaibrach/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/jlantunez/128.jpg"></div>
       </div>      
       <div class="row">
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/skeletonkey/128.jpg"></div>
-        <div class="col-md-3"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/victorerixon/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/skeletonkey/128.jpg"></div>
+        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/victorerixon/128.jpg"></div>
       </div>
     </div>
     <div class="col-md-2"></div>
   </div>
 </div>
+<script src="js/game.js"></script>
 </body>
 </html>
