tried to change timer

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 <div class="container-fluid">
   <div class="header">
     <h1>Click dem Faces</h1>
-    <button type="button" class="btn btn-secondary" id="buttonn">Start &gt;&gt;</button>
+    <button type="button" class="btn btn-secondary" id="buttonn">Start</button>
     <div id="redirect_box" style="display:block;">
       You're done in
       <span id="countdown"></span>
@@ -46,7 +46,8 @@
         <div class="col-md-3"><img onclick="point" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/uxceo/128.jpg"></div>
         <div class="col-md-3"><img onclick="point" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
         <div class="col-md-3"><img onclick="point" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/skeletonkey/128.jpg"></div>
-        <div class="col-md-3"><img onclick="point" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/victorerixon/128.jpg"></div>      
+        <div class="col-md-3"><img onclick="point" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/victorerixon/128.jpg"></div>
+      </div>      
       <div class="row">
         <div class="col-md-3"><img onclick="point" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/beacrea/128.jpg"></div>
         <div class="col-md-3"><img onclick="point" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/allisongrayce/128.jpg"></div>
