--- a/home.html
+++ b/home.html
@@ -20,7 +20,11 @@
 <div class="container-fluid">
   <div class="header">
     <h1>Click dem Faces</h1>
-    <button type="button" class="btn btn-secondary" id="buttonn">Start</button>
+<div>
+    <input type="button" value="start countdown" onclick="countdown_init()" />
+    <input type="button" value="stop countdown" onclick="countdown_clear()" />
+</div>
+<div id="countdown_text">Placeholding text</div>
   </div>
   <div class="row-fluid">
     <div class="col-md-2"></div>
