--- a/home.html
+++ b/home.html
@@ -20,11 +20,7 @@
 <div class="container-fluid">
   <div class="header">
     <h1>Click dem Faces</h1>
-<div>
-    <input type="button" value="start countdown" onclick="countdown_init()" />
-    <input type="button" value="stop countdown" onclick="countdown_clear()" />
-</div>
-<div id="countdown_text">Placeholding text</div>
+    <button class="btn btn-primary">Start</button>
   </div>
   <div class="row-fluid">
     <div class="col-md-2"></div>
