game begins on start click

--- a/home.html
+++ b/home.html
@@ -20,33 +20,33 @@
 <div class="container-fluid">
   <div class="header">
     <h1>Click dem Faces</h1>
-    <button class="btn btn-primary">Start</button>
+    <button class="btn btn-primary" id="toggleBtn">Start</button>
   </div>
   <div class="row-fluid">
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <div class="row">
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/ritu/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/tonypeterson/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/spiltmilkstudio/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/ritu/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/tonypeterson/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/spiltmilkstudio/128.jpg"></div>
       </div>      
       <div class="row">
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/pixeliris/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/kaibrach/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/jlantunez/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/pixeliris/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kaibrach/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/jlantunez/128.jpg"></div>
       </div>      
       <div class="row">
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/uxceo/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/skeletonkey/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/victorerixon/128.jpg"></div>      
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/uxceo/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/skeletonkey/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/victorerixon/128.jpg"></div>      
       <div class="row">
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/beacrea/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/allisongrayce/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/alexcican/128.jpg"></div>
-        <div class="col-md-3"><img id="points" class="img-circle" onclick="countPoints()" src="https://s3.amazonaws.com/uifaces/faces/twitter/linclark/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/beacrea/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/allisongrayce/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/alexcican/128.jpg"></div>
+        <div class="col-md-3"><img id="points" class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/linclark/128.jpg"></div>
       </div>
     </div>
     <div class="col-md-2"></div>
