changed background color and images hidden on click

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 </nav>
 <div class="container-fluid">
   <div class="header">
-    <h1>Click dem Faces</h1>
+    <h1>Click the Faces</h1>
     <button class="btn btn-primary" id="toggleBtn">Start</button>
     <div id="status">20</div>
   </div>
