--- a/home.html
+++ b/home.html
@@ -9,56 +9,76 @@
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
-<nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <!-- Brand -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">My Game</a>
+      </div>
+    </div><!-- /.container-fluid -->
+  </nav>
   <div class="container-fluid">
-    <!-- Brand -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">My Game</a>
+    <div class="header">
+      <h1>Click the Faces</h1>
+      <button class="btn btn-success" id="toggleBtn">Start</button>
+      <button class="btn btn-info" id="resetBtn">Reset</button>
+      <div id="status">20</div>
     </div>
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="container-fluid">
-  <div class="header">
-    <h1>Click the Faces</h1>
-    <button class="btn btn-primary" id="toggleBtn">Start</button>
-    <div id="status">20</div>
-  </div>
-  <div class="row-fluid">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-      <div class="row">
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/ritu/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/tonypeterson/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/spiltmilkstudio/128.jpg"></div>
-      </div>      
-      <div class="row">
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/pixeliris/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kaibrach/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/jlantunez/128.jpg"></div>
-      </div>      
-      <div class="row">
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/uxceo/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/skeletonkey/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/victorerixon/128.jpg"></div>      
-      <div class="row">
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/beacrea/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/allisongrayce/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/alexcican/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/linclark/128.jpg"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/felipenogs/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/stephane/128.jpg"></div>
-        <div class="col-md-3"><img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/stylecampaign/128.jpg"></div>
+    <div class="row-fluid">
+      <div class="col-md-8 col-md-offset-2">
+        <div class="row">
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/ritu/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/tonypeterson/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/spiltmilkstudio/128.jpg"></div>
+        </div>      
+        <div class="row">
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/pixeliris/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kaibrach/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/jlantunez/128.jpg"></div>
+        </div>      
+        <div class="row">
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/uxceo/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/skeletonkey/128.jpg"></div>
+          <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/victorerixon/128.jpg"></div>      
+          <div class="row">
+            <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/beacrea/128.jpg"></div>
+            <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/allisongrayce/128.jpg"></div>
+            <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/alexcican/128.jpg"></div>
+            <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/linclark/128.jpg"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/felipenogs/128.jpg"></div>
+            <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg"></div>
+            <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/stephane/128.jpg"></div>
+            <div class="col-md-3"><img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/stylecampaign/128.jpg"></div>
+          </div>
+        </div>
+        <div class="col-md-2"></div>
       </div>
     </div>
-    <div class="col-md-2"></div>
   </div>
-</div>
-<script src="js/game.js"></script>
+
+  <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Your Score Is</h4>
+        </div>
+        <div class="modal-body">
+          <p>Your Score is:<span id="yourScore"></span></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+  <script   src="https://code.jquery.com/jquery-1.12.3.min.js"   integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="   crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script src="js/game.js"></script>
 </body>
 </html>
